[gd_scene load_steps=2 format=3 uid="uid://hn82dt4bj5fb"]

[ext_resource type="Script" path="res://control.gd" id="1_vitum"]

[node name="Control" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vitum")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="InputLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "Text"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="valueLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Text"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 4

[node name="Button_1" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1"

[node name="Button_2" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "2"

[node name="Button_3" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "3"

[node name="Button_Plus" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "+"

[node name="Button_4" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "4"

[node name="Button_5" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "5"

[node name="Button_6" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "6"

[node name="Button_Minus" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "-"

[node name="Button_7" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "7"

[node name="Button_8" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "8"

[node name="Button_9" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "9"

[node name="Button_Multi" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "*"

[node name="Button_0" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="Button_Decimal" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "."

[node name="Button_Enter" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Enter"

[node name="Button_Div" type="Button" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "/"

[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_Plus" to="." method="_on_button_plus_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_Minus" to="." method="_on_button_minus_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_Multi" to="." method="_on_button_multi_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_0" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_Decimal" to="." method="_on_button_decimal_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_Enter" to="." method="_on_button_enter_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/Button_Div" to="." method="_on_button_div_pressed"]
